cmake_minimum_required(VERSION 3.16)
project(WojtyczkaTomasz-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(WojtyczkaTomasz-etap3 main.cpp Produkt.h Produkt.cpp Towar.h Towar.cpp Towar_sypki.h Towar_sypki.cpp Towar_ciekly.h Towar_ciekly.cpp Magazyn.h Magazyn.cpp Siec_magazynow.h Siec_magazynow.cpp Plik.h Plik.cpp Wyjatek.h Wyjatek.cpp mojvector.h Paleciak.h Paleciak.cpp)